# FFPL-fork

./: .gitignore  LICENSE  Makefile  README.md  STRUCTURE.md  _CoqProject  ffpl.opam
Autosubst/: Autosubst.v  Autosubst_Basics.v  Autosubst_Classes.v  Autosubst_Derive.v  Autosubst_Lemmas.v  Autosubst_MMap.v  Autosubst_MMapInstances.v  Autosubst_Tactics.v
theories/coq_warmup/: part1.v  part1_class.v  part2.v  part2_class.v
theories/lib/: debruijn.v  facts.v  maps.v  prelude.v  sets.v
theories/type_systems/stlc/: class4.v  closed.v  lang.v  lang_class.v  lecture6.v  lecture6_sol.v  logrel.v  logrel_class.v  notation.v  parallel_subst.v  sheet06.v  types.v  types_class.v  types_class2.v  untyped.v
theories/type_systems/stlc_de_bruijn/: bigstep.v  lang.v  logrel.v  notation.v  sheet09.v  subst.v  types.v
theories/type_systems/stlc_extended/: bigstep.v  closed.v  lang.v  logrel.v  notation.v  parallel_subst.v  types.v
theories/type_systems/stlc_extended_sol/: bigstep.v  closed.v  lang.v  logrel.v  notation.v  parallel_subst.v  types.v
theories/type_systems/systemf/: bigstep.v  deterministic.v  existential_invariants.v  free_theorems.v  lang.v  logrel.v  notation.v  tactics.v  types.v
theories/type_systems/systemf_me/: assert.v  assert.v~  cast.v  cast.v~  mut.v  mut.v~  syntax.v  syntax.v~
theories/type_systems/systemf_state/: bigstep.v  deterministic.v  lang.v  logrel.v  mutbit.v  notation.v  tactics.v  types.v  types_fo.v
